# smart-archive

./: Cargo.toml  README.md  smart-archive
src/: cli.rs  custom_log.rs  error.rs  main.rs
tests/: integration_tests.rs
